# maestro

./: .dockerignore  .env.example  .gitignore  GEMINI.md  README.md  Vision.md  build_vllm_local.sh  cfg.json  pyproject.toml  setup_vllm_native.sh  start_maestro_native.sh  start_maestro_ui.sh  test_fixes.py  test_raven.py
benchmarks/: core.py  requirements_bench.txt
docs/: PREFLIGHT_TOOLS.md  visions.md
maestro/: .geminiignore  .gitignore  README.md  cfg.json  cli.py  config.py  log.py  maestro_entry.py  pyproject.toml  pyvenv.cfg  session_controller.py  store.py
maestro/docs/: ARCHITECTURE.md  FOREST.md  FUTURE_VISION.md  tmps_lite.txt  visions.md
maestro/experiments/: run_lcb.py
maestro/finetune/scripts/: extract_real_pairs.py  generate_synth_dataset.py
maestro/llm/: __init__.py  hf_client.py  ollama_client.py  prompts.py  vllm_client.py
maestro/maestro/: cli.py  config.py  store.py
maestro/maestro/llm/: __init__.py  hf_client.py  ollama_client.py
maestro/maestro/orch/: artifact.py  forest_orchestrator.py  forest_types.py  luna.py  patch.py  raven.py
maestro/maestro/tmps/: normalize.py  parser.py  types.py  validate.py
maestro/models/: registries.json
maestro/orch/: archive.py  artifact.py  context.py  discovery.py  escalate.py  events.py  forest_orchestrator.py  forest_types.py  luna.py  luna_vllm.py  orchestrator.py  patch.py  plan_filters.py  raven.py  validator_tools.py  vllm_orchestrator.py
maestro/tests/: test_tmps_validate.py  test_validator_understanding.py
maestro/tmps/: lite.py  parser.py
maestro/utils/: math_helpers.py
(+42 files in other folders)
