[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maestro"
version = "0.1.0"
description = "TMP-S Lite coding orchestra on Ollama"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "peft",
    "bitsandbytes>=0.44.0",
    "accelerate",
    "tqdm",
    "requests"
]

[project.scripts]
maestro = "maestro.cli:main"

[tool.setuptools]
packages = ["maestro", "maestro.llm", "maestro.tmps", "maestro.orch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
